--- a/BuddhaBowls/UserControls/BreadGuideControl.xaml
+++ b/BuddhaBowls/UserControls/BreadGuideControl.xaml
@@ -19,12 +19,10 @@
         <TextBlock x:Name="textBlock" Grid.Row="0" Margin="0" Text="Bread Order Guide" VerticalAlignment="Center" HorizontalAlignment="Center"
                    FontSize="30"/>
 
-        <Label Content="Bread Order Week:" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5, 0, 0, 5" />
-        <DatePicker SelectedDate="{Binding BreadOrderDate}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="125, 0, 0, 5"
-                    Width="120"/>
-        <TextBlock Text="{Binding DateErrorMessage}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="260, 0, 0, 5" 
-                   Foreground="Red"/>
-        <TextBlock Text="{Binding SquareProgMessage}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="260, 0, 0, 5" />
+        <local:PeriodSelectorControl DataContext="{Binding PeriodSelector}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                                     Margin="0, 0, 0, 5" />
+
+        <TextBlock Text="{Binding SquareProgMessage}" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0, 0, 205, 2" />
         <ItemsControl Grid.Row="1" ItemsSource="{Binding BreadOrderList[0].BreadDescDict.Values}" HorizontalAlignment="Right"
                       VerticalAlignment="Stretch" Width="200">
             <ItemsControl.ItemTemplate>
@@ -41,7 +39,7 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
-        <Button Content="Update From Square" Grid.Row="1" Width="130" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0, 0, 205, 5"
+        <Button Content="Update From Square" Grid.Row="1" Width="130" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0, 5, 205, 0"
                 Command="{Binding SquareCommand}" />
 
         <Border BorderBrush="Black" BorderThickness="1" Grid.Row="2">
