--- a/BuddhaBowls/UserControls/CogsControl.xaml
+++ b/BuddhaBowls/UserControls/CogsControl.xaml
@@ -10,15 +10,18 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
             <RowDefinition Height="30" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="{Binding RowHeights[0]}" />
+            <RowDefinition Height="{Binding RowHeights[1]}" />
+            <RowDefinition Height="{Binding RowHeights[2]}" />
         </Grid.RowDefinitions>
         <TextBlock Text="{Binding Header}" FontSize="24" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" />
 
         <local:PeriodSelectorControl DataContext="{Binding PeriodSelector}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Stretch" />
 
         <DataGrid x:Name="dataGrid" Grid.Row="2" ItemsSource="{Binding CategoryList}" HorizontalAlignment="Stretch"
-                              VerticalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Auto" CanUserReorderColumns="False"
-                              AutoGenerateColumns="False" CanUserSortColumns="False" CanUserAddRows="False" Panel.ZIndex="0" >
+                  VerticalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Auto" CanUserReorderColumns="False"
+                  AutoGenerateColumns="False" CanUserSortColumns="False" CanUserAddRows="False" Panel.ZIndex="0" >
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Category" Binding="{Binding Name}" Width="2*" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Start Inv" Binding="{Binding Path=StartInv, Mode=OneWay, StringFormat=c}" Width="1*" />
@@ -27,5 +30,14 @@
                 <DataGridTextColumn Header="COGS Cost" Binding="{Binding Path=CogsCost, StringFormat=c}" IsReadOnly="True" Width="2*" />
             </DataGrid.Columns>
         </DataGrid>
+        <Grid Grid.Row="3">
+            <local:CogsSubReportControl DataContext="{Binding SubReports[0]}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        </Grid>
+        <Grid Grid.Row="4">
+            <local:CogsSubReportControl DataContext="{Binding SubReports[1]}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        </Grid>
+        <Grid Grid.Row="5">
+            <local:CogsSubReportControl DataContext="{Binding SubReports[2]}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        </Grid>
     </Grid>
 </UserControl>
