Moves period selector object to changeable tab VM. Makes report tab a changeable tab

--- a/BuddhaBowls/MainWindow.xaml
+++ b/BuddhaBowls/MainWindow.xaml
@@ -36,7 +36,7 @@
                 <uc:ChangeableTabControl DataContext="{Binding RecipeTab}" />
             </TabItem>
             <TabItem Header="Reports">
-                <uc:CogsControl DataContext="{Binding ReportTab}" />
+                <uc:ChangeableTabControl DataContext="{Binding ReportTab}" />
             </TabItem>
             <TabItem Header="Settings">
                 <Grid>
