--- a/BuddhaBowls/UserControls/InventoryHistoryControl.xaml
+++ b/BuddhaBowls/UserControls/InventoryHistoryControl.xaml
@@ -12,7 +12,7 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <local:PeriodSelectorControl DataContext="{Binding PeriodSelector}" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Stretch" />
+        <local:PeriodSelectorControl Grid.Row="0" DataContext="{Binding PeriodSelector}" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Button Grid.Row="0" Height="30"  Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
                 VerticalAlignment="Bottom" Margin="35, 0" Command="{Binding AddCommand}">
             <iconPacks:PackIconFontAwesome Kind="Plus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
