--- a/BuddhaBowls/UserControls/BreadGuideControl.xaml
+++ b/BuddhaBowls/UserControls/BreadGuideControl.xaml
@@ -15,12 +15,12 @@
             <RowDefinition Height="56" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        
+
         <TextBlock x:Name="textBlock" Grid.Row="0" Margin="0" Text="Bread Order Guide" VerticalAlignment="Center" HorizontalAlignment="Center"
                    FontSize="30"/>
 
-        <local:PeriodSelectorControl DataContext="{Binding PeriodSelector}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom"
-                                     Margin="0, 0, 0, 5" />
+        <local:PeriodSelectorControl DataContext="{Binding PeriodSelector}" Grid.Row="1" VerticalAlignment="Bottom"
+                                     Margin="0,0,0,2" />
 
         <TextBlock Text="{Binding SquareProgMessage}" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0, 0, 205, 2" />
         <ItemsControl Grid.Row="1" ItemsSource="{Binding BreadOrderList[0].BreadDescDict.Values}" HorizontalAlignment="Right"
