--- a/BuddhaBowls/UserControls/BreadGuideControl.xaml
+++ b/BuddhaBowls/UserControls/BreadGuideControl.xaml
@@ -22,7 +22,7 @@
         <local:PeriodSelectorControl DataContext="{Binding PeriodSelector}" Grid.Row="1" VerticalAlignment="Bottom"
                                      Margin="0,0,0,2" />
 
-        <TextBlock Text="{Binding SquareProgMessage}" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0, 0, 205, 2" />
+        <TextBlock Text="{Binding SquareProgMessage}" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0, 5, 350, 0" />
         <ItemsControl Grid.Row="1" ItemsSource="{Binding BreadOrderList[0].BreadDescDict.Values}" HorizontalAlignment="Right"
                       VerticalAlignment="Stretch" Width="200">
             <ItemsControl.ItemTemplate>
