--- a/BuddhaBowls/UserControls/CogsControl.xaml
+++ b/BuddhaBowls/UserControls/CogsControl.xaml
@@ -13,9 +13,11 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <local:PeriodSelectorControl Grid.Row="0" DataContext="{Binding PeriodSelector}" VerticalAlignment="Center" Margin="0,2,0,2"/>
-        <DataGrid x:Name="dataGrid" Grid.Row="1" ItemsSource="{Binding CategoryList}" HorizontalAlignment="Stretch"
+        <Border Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="Black" BorderThickness="1" />
+        <DataGrid x:Name="dataGrid" Grid.Row="1" ItemsSource="{Binding CategoryList}" HorizontalAlignment="Stretch" Panel.ZIndex="0"
                   VerticalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Auto" CanUserReorderColumns="False"
-                  AutoGenerateColumns="False" CanUserSortColumns="False" CanUserAddRows="False" Panel.ZIndex="0" >
+                  AutoGenerateColumns="False" CanUserSortColumns="False" CanUserAddRows="False" SelectedItem="{Binding SelectedCogs}"
+                  Margin="1, 1, 1, 1">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Category" Binding="{Binding Name}" Width="2*" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Start Inv" Binding="{Binding Path=StartInv, Mode=OneWay, StringFormat=c}" Width="1*" />
@@ -36,35 +38,35 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <TextBlock Text="Start Inventory" Grid.Column="0" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"
-                       FontSize="18" />
+            <Button Content="Start Inventory" Grid.Column="0" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"
+                       FontSize="18" Command="{Binding StartInvCommand}" />
             <DataGrid Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding StartInv}"
                       ScrollViewer.VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
                       IsReadOnly="True">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" />
-                    <DataGridTextColumn Header="Count" Binding="{Binding Count}" Width="50" />
+                    <DataGridTextColumn Header="Count" Binding="{Binding Count}" Width="80" />
                 </DataGrid.Columns>
             </DataGrid>
-            <TextBlock Text="Ending Inventory" Grid.Column="1" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"
-                       FontSize="18" />
+            <Button Content="Ending Inventory" Grid.Column="1" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"
+                       FontSize="18" Command="{Binding EndInvCommand}" />
             <DataGrid Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding EndingInv}"
                       ScrollViewer.VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
                       IsReadOnly="True">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" />
-                    <DataGridTextColumn Header="Count" Binding="{Binding Count}" Width="50" />
+                    <DataGridTextColumn Header="Count" Binding="{Binding Count}" Width="80" />
                 </DataGrid.Columns>
             </DataGrid>
             <TextBlock Text="Received Purchases" Grid.Column="2" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"
                        FontSize="18" />
             <DataGrid Grid.Column="2" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding RecOrders}"
                       ScrollViewer.VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
-                      IsReadOnly="True" SelectedItem="{Binding SelectedOrder}">
+                      IsReadOnly="True" SelectedItem="{Binding SelectedOrder}" MouseDoubleClick="recOrders_MouseDoubleClick">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="PO #" Width="50" />
-                    <DataGridTextColumn Header="Rec Date" Width="2*" />
-                    <DataGridTextColumn Header="Cost" Width="1*" />
+                    <DataGridTextColumn Header="PO #" Binding="{Binding Id}" Width="50" />
+                    <DataGridTextColumn Header="Rec Date" Binding="{Binding Path=ReceivedDate, StringFormat={}{0:MM/dd/yy}}" Width="2*" />
+                    <DataGridTextColumn Header="Cost" Binding="{Binding Path=TotalCost, StringFormat=c}" Width="1*" />
                 </DataGrid.Columns>
             </DataGrid>
             <ScrollViewer Grid.Column="3" Grid.RowSpan="2" ScrollViewer.VerticalScrollBarVisibility="Auto" Visibility="{Binding OrderDetailsVisibility}">
@@ -94,7 +96,7 @@
                                VerticalAlignment="Center" />
                     <Label Content="Ordered Date:" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center" 
                            Margin="0, 0, 5, 0" />
-                    <TextBlock Text="{Binding Path=SelectedOrderedDate, StringFormat='{}{0:dd/MM/yyyy}'}" Grid.Column="1" Grid.Row="3"
+                    <TextBlock Text="{Binding Path=SelectedOrderedDate, StringFormat='{}{0:MM/dd/yyyy}'}" Grid.Column="1" Grid.Row="3"
                                HorizontalAlignment="Left" VerticalAlignment="Center" />
 
                 </Grid>
