--- a/BuddhaBowls/UserControls/LabelValueControl.xaml
+++ b/BuddhaBowls/UserControls/LabelValueControl.xaml
@@ -11,7 +11,7 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="50" />
         </Grid.ColumnDefinitions>
-        <Label Grid.Column="0" Content="{Binding Label}" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0, 0, 5, 0" />
+        <Label Grid.Column="0" Content="{Binding Label}" HorizontalAlignment="Right" VerticalAlignment="Center" FontWeight="Bold" Margin="0, 0, 5, 0" />
         <TextBlock Grid.Column="1" Text="{Binding Value}" HorizontalAlignment="Left" VerticalAlignment="Center" />
     </Grid>
 </UserControl>
