--- a/BuddhaBowls/UserControls/OrderTabControl.xaml
+++ b/BuddhaBowls/UserControls/OrderTabControl.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BuddhaBowls.UserControls"
+             xmlns:helper="clr-namespace:BuddhaBowls.Helpers"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="800">
@@ -11,7 +12,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
             <RowDefinition Height="120" />
-            <RowDefinition Height="100" />
+            <RowDefinition Height="30" />
             <RowDefinition Height="30" />
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
@@ -49,40 +50,32 @@
         <Border Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="1" BorderBrush="Black" />
         <Grid Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="180" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="200" />
+                <ColumnDefinition Width="200" />
+                <ColumnDefinition Width="200" />
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-            </Grid.RowDefinitions>
-            <local:LabelValueControl DataContext="{Binding TotalOrders}" Grid.Column="0" Grid.Row="0" VerticalAlignment="Center"
+            <local:LabelValueControl DataContext="{Binding TotalOrders}" Grid.Column="0" VerticalAlignment="Center"
                                      HorizontalAlignment="Center" />
-            <local:LabelCostValueControl DataContext="{Binding WeekCostTotal}" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center"
+            <local:LabelCostValueControl DataContext="{Binding WeekCostTotal}" Grid.Column="1" VerticalAlignment="Center"
                                          HorizontalAlignment="Center" />
-            <local:LabelCostValueControl DataContext="{Binding PeriodCostTotal}" Grid.Column="0" Grid.Row="2" VerticalAlignment="Center"
+            <local:LabelCostValueControl DataContext="{Binding PeriodCostTotal}" Grid.Column="2" VerticalAlignment="Center"
                                          HorizontalAlignment="Center" />
-            <ItemsControl Grid.Column="1" Grid.RowSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding OrderStats}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel IsItemsHost="True" Orientation="Vertical" />
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <local:LabelCostValueControl DataContext="{Binding}" Height="30" Width="180" />
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
         </Grid>
 
         <local:PeriodSelectorControl DataContext="{Binding PeriodSelector}" Grid.Row="3" VerticalAlignment="Stretch" Margin="0, 0, 380, 0"/>
         <Label Content="Invoice Log" Grid.Row="3" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Margin="120, 0, 0, 0" />
         <DataGrid x:Name="dataGrid2" Grid.Row="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                  ScrollViewer.VerticalScrollBarVisibility="Auto" ItemsSource="{Binding ReceivedOrders}" SelectedItem="{Binding SelectedReceivedOrder}"
-                  AutoGenerateColumns="False" CanUserAddRows="False" RowEditEnding="dataGrid2_RowEditEnding" BeginningEdit="dataGrid2_BeginningEdit">
+                    ScrollViewer.VerticalScrollBarVisibility="Auto" ItemsSource="{Binding ReceivedOrders}" SelectedItem="{Binding SelectedReceivedOrder}"
+                    AutoGenerateColumns="False" CanUserAddRows="False" RowEditEnding="dataGrid2_RowEditEnding" BeginningEdit="dataGrid2_BeginningEdit"
+                    ScrollViewer.CanContentScroll="False" RowDetailsVisibilityMode="Collapsed" PreviewMouseWheel="dataGrid2_PreviewMouseWheel">
             <DataGrid.Columns>
+                <DataGridTemplateColumn Width="35">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Expander Expanded="Expander_Clicked" Collapsed="Expander_Clicked" IsExpanded="False" Height="30" Background="White"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
                 <DataGridTextColumn Header="Order #" Binding="{Binding Id}" Width="1*" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Vendor" Binding="{Binding VendorName}" Width="2*" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Total Cost" Binding="{Binding Path=TotalCost, StringFormat=c}" Width="2*" IsReadOnly="True"/>
@@ -95,8 +88,26 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <!--<DataGridTextColumn x:Name="ReceivedColumn" Header="Received Date" Binding="{Binding ReceivedDate}" Width="1*" />-->
             </DataGrid.Columns>
+
+            <DataGrid.RowDetailsTemplate>
+                <DataTemplate>
+                    <ListBox HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                                ItemsSource="{Binding Path=OrderStats}">
+                        <!--<ListBox.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel IsItemsHost="True" Orientation="Vertical" />
+                            </ItemsPanelTemplate>
+                        </ListBox.ItemsPanel>-->
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <local:LabelCostValueControl DataContext="{Binding}" Height="30" Width="180" HorizontalAlignment="Left"
+                                                                Margin="20, 0, 0, 0" />
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </DataTemplate>
+            </DataGrid.RowDetailsTemplate>
         </DataGrid>
         <Button Grid.Row="3" Width="25" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" VerticalAlignment="Center"
                             Margin="5, 0" Command="{Binding DeleteReceivedOrderCommand}">
