--- a/BuddhaBowls/UserControls/CogsControl.xaml
+++ b/BuddhaBowls/UserControls/CogsControl.xaml
@@ -38,8 +38,8 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Button Content="Start Inventory" Grid.Column="0" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"
-                       FontSize="18" Command="{Binding StartInvCommand}" />
+            <Button Content="Start Inventory" Grid.Column="0" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Stretch"
+                       FontSize="14" Command="{Binding StartInvCommand}" />
             <DataGrid Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding StartInv}"
                       ScrollViewer.VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
                       IsReadOnly="True">
@@ -48,19 +48,9 @@
                     <DataGridTextColumn Header="Count" Binding="{Binding Count}" Width="80" />
                 </DataGrid.Columns>
             </DataGrid>
-            <Button Content="Ending Inventory" Grid.Column="1" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"
-                       FontSize="18" Command="{Binding EndInvCommand}" />
-            <DataGrid Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding EndingInv}"
-                      ScrollViewer.VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
-                      IsReadOnly="True">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" />
-                    <DataGridTextColumn Header="Count" Binding="{Binding Count}" Width="80" />
-                </DataGrid.Columns>
-            </DataGrid>
-            <TextBlock Text="Received Purchases" Grid.Column="2" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"
+            <TextBlock Text="Received Purchases" Grid.Column="1" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"
                        FontSize="18" />
-            <DataGrid Grid.Column="2" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding RecOrders}"
+            <DataGrid Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding RecOrders}"
                       ScrollViewer.VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
                       IsReadOnly="True" SelectedItem="{Binding SelectedOrder}" MouseDoubleClick="recOrders_MouseDoubleClick">
                 <DataGrid.Columns>
@@ -69,6 +59,17 @@
                     <DataGridTextColumn Header="Cost" Binding="{Binding Path=TotalCost, StringFormat=c}" Width="1*" />
                 </DataGrid.Columns>
             </DataGrid>
+            <Button Content="Ending Inventory" Grid.Column="2" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Stretch"
+                       FontSize="14" Command="{Binding EndInvCommand}" />
+            <DataGrid Grid.Column="2" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding EndingInv}"
+                      ScrollViewer.VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
+                      IsReadOnly="True">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" />
+                    <DataGridTextColumn Header="Count" Binding="{Binding Count}" Width="80" />
+                </DataGrid.Columns>
+            </DataGrid>
+
             <ScrollViewer Grid.Column="3" Grid.RowSpan="2" ScrollViewer.VerticalScrollBarVisibility="Auto" Visibility="{Binding OrderDetailsVisibility}">
                 <Grid>
                     <Grid.RowDefinitions>
