--- a/BuddhaBowls/UserControls/CogsControl.xaml
+++ b/BuddhaBowls/UserControls/CogsControl.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
-            <RowDefinition Height="180" />
+            <RowDefinition Height="210" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <local:PeriodSelectorControl Grid.Row="0" DataContext="{Binding PeriodSelector}" VerticalAlignment="Center" Margin="0,2,0,2"/>
@@ -23,15 +23,15 @@
                 <DataGridTextColumn Header="Start Inv" Binding="{Binding Path=StartInv, Mode=OneWay, StringFormat=c}" Width="1*" />
                 <DataGridTextColumn Header="Rec Purchases" Binding="{Binding Path=Purchases, Mode=OneWay, StringFormat=c}" Width="1*" />
                 <DataGridTextColumn Header="End Inv" Binding="{Binding Path=EndInv, Mode=OneWay, StringFormat=c}" Width="1*" />
+                <DataGridTextColumn Header="Useage" Binding="{Binding Path=Useage, Mode=OneWay}" Width="60" />
                 <DataGridTextColumn Header="COGS Cost" Binding="{Binding Path=CogsCost, StringFormat=c}" IsReadOnly="True" Width="2*" />
             </DataGrid.Columns>
         </DataGrid>
         <Grid Grid.Row="2" Visibility="{Binding CogInfoVisibility}">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="3*" />
+                <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="30" />
@@ -52,12 +52,34 @@
                        FontSize="18" />
             <DataGrid Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding RecOrders}"
                       ScrollViewer.VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
-                      IsReadOnly="True" SelectedItem="{Binding SelectedOrder}" MouseDoubleClick="recOrders_MouseDoubleClick">
+                      IsReadOnly="True" MouseDoubleClick="recOrders_MouseDoubleClick"
+                      ScrollViewer.CanContentScroll="False" RowDetailsVisibilityMode="Collapsed">
                 <DataGrid.Columns>
+                    <DataGridTemplateColumn Width="35">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Expander Expanded="Expander_Clicked" Collapsed="Expander_Clicked" IsExpanded="False" Height="30" Background="White"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
                     <DataGridTextColumn Header="PO #" Binding="{Binding Id}" Width="50" />
                     <DataGridTextColumn Header="Rec Date" Binding="{Binding Path=ReceivedDate, StringFormat={}{0:MM/dd/yy}}" Width="2*" />
                     <DataGridTextColumn Header="Cost" Binding="{Binding Path=TotalCost, StringFormat=c}" Width="1*" />
                 </DataGrid.Columns>
+                <DataGrid.RowDetailsTemplate>
+                    <DataTemplate>
+                        <DataGrid HorizontalAlignment="Stretch" ItemsSource="{Binding InvItems}" IsEnabled="False"
+                                  AutoGenerateColumns="False" CanUserAddRows="False" Margin="20,0,0,0"
+                                  IsReadOnly="True" SelectedItem="{Binding SelectedOrder}" MouseDoubleClick="recOrders_MouseDoubleClick"
+                                  ScrollViewer.CanContentScroll="False">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="Item" Binding="{Binding Name}" Width="2*" />
+                                <DataGridTextColumn Header="Qty" Binding="{Binding Path=LastOrderAmount}" Width="50" />
+                                <DataGridTextColumn Header="Cost" Binding="{Binding Path=PurchaseExtension, StringFormat=c}" Width="*" />
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </DataTemplate>
+                </DataGrid.RowDetailsTemplate>
             </DataGrid>
             <Button Content="Ending Inventory" Grid.Column="2" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Stretch"
                        FontSize="14" Command="{Binding EndInvCommand}" />
@@ -69,39 +91,6 @@
                     <DataGridTextColumn Header="Count" Binding="{Binding Count}" Width="80" />
                 </DataGrid.Columns>
             </DataGrid>
-
-            <ScrollViewer Grid.Column="3" Grid.RowSpan="2" ScrollViewer.VerticalScrollBarVisibility="Auto" Visibility="{Binding OrderDetailsVisibility}">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="30" />
-                        <RowDefinition Height="30" />
-                        <RowDefinition Height="30" />
-                        <RowDefinition Height="30" />
-                        <RowDefinition Height="30" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="125" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Label Content="Total Cost:" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Center"
-                           Margin="0, 0, 5, 0" />
-                    <TextBlock Text="{Binding Path=SelectedTotalCost, StringFormat=c}" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left"
-                               VerticalAlignment="Center" />
-                    <Label Content="Total Food Cost:" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" 
-                           Margin="0, 0, 5, 0" />
-                    <TextBlock Text="{Binding Path=SelectedTotalFoodCost, StringFormat=c}" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left"
-                               VerticalAlignment="Center" />
-                    <Label Content="Total Category Cost:" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" 
-                           Margin="0, 0, 5, 0" />
-                    <TextBlock Text="{Binding Path=SelectedTotalCategoryCost, StringFormat=c}" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left"
-                               VerticalAlignment="Center" />
-                    <Label Content="Ordered Date:" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center" 
-                           Margin="0, 0, 5, 0" />
-                    <TextBlock Text="{Binding Path=SelectedOrderedDate, StringFormat='{}{0:MM/dd/yyyy}'}" Grid.Column="1" Grid.Row="3"
-                               HorizontalAlignment="Left" VerticalAlignment="Center" />
-
-                </Grid>
-            </ScrollViewer>
         </Grid>
     </Grid>
 </UserControl>
