--- a/BuddhaBowls/MainWindow.xaml
+++ b/BuddhaBowls/MainWindow.xaml
@@ -35,7 +35,7 @@
             <TabItem Header="Recipes">
                 <uc:ChangeableTabControl DataContext="{Binding RecipeTab}" />
             </TabItem>
-            <TabItem Header="Reports">
+            <TabItem Header="Reports" IsSelected="{Binding Path=ReportsSelected, Mode=OneWayToSource}">
                 <uc:ChangeableTabControl DataContext="{Binding ReportTab}" />
             </TabItem>
             <TabItem Header="Settings">
