Revert "Sets up such that COGS is re-calculated when the tab is selected"
This reverts commit 8ca0ee9e9eefa9b96accfdd9d00a043c0f19f1a8.

--- a/BuddhaBowls/MainWindow.xaml
+++ b/BuddhaBowls/MainWindow.xaml
@@ -35,7 +35,7 @@
             <TabItem Header="Recipes">
                 <uc:ChangeableTabControl DataContext="{Binding RecipeTab}" />
             </TabItem>
-            <TabItem Header="Reports" IsSelected="{Binding Path=ReportsSelected, Mode=OneWayToSource}">
+            <TabItem Header="Reports">
                 <uc:ChangeableTabControl DataContext="{Binding ReportTab}" />
             </TabItem>
             <TabItem Header="Settings">
