--- a/BuddhaBowls/UserControls/BreadGuideControl.xaml
+++ b/BuddhaBowls/UserControls/BreadGuideControl.xaml
@@ -59,8 +59,10 @@
                     <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
-                <Label Content="Date" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                <Label Content="Day of Week" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                <Label Content="Date" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Tag="Static"/>
+                <Label Content="Day of Week" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Tag="Static"/>
+                <Label Content="Total" Grid.Row="0" Grid.Column="8" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"
+                       Tag="Static" />
             </Grid>
         </Border>
         <ScrollViewer Name="c_dataGridScrollViewer" Grid.Row="3" VerticalScrollBarVisibility="Auto"
