--- a/BuddhaBowls/UserControls/InventoryHistoryControl.xaml
+++ b/BuddhaBowls/UserControls/InventoryHistoryControl.xaml
@@ -23,8 +23,8 @@
         </Button>
         <Button Grid.Row="0" Height="30" Width="70" Content="View" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="70, 0"
                 Command="{Binding ViewCommand}" />
-        <Button Grid.Row="0" Height="30" Width="70" Content="Compare" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="140, 0"
-                Command="{Binding CompareCommand}" />
+        <!--<Button Grid.Row="0" Height="30" Width="70" Content="Compare" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="140, 0"
+                Command="{Binding CompareCommand}" />-->
         <DataGrid x:Name="dataGrid2" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                                 ScrollViewer.VerticalScrollBarVisibility="Auto" ItemsSource="{Binding InventoryList}"
                                 SelectedItem="{Binding SelectedInventory}" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
